syntax = "proto3";
package vigorousdeveloper.pochuman.pochuman;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/VigorousDeveloper/poc-human/x/pochuman/types";

// Msg defines the Msg service.
service Msg {
      rpc RequestTransaction(MsgRequestTransaction) returns (MsgRequestTransactionResponse);
  rpc ObservationVote(MsgObservationVote) returns (MsgObservationVoteResponse);
  rpc UpdateBalance(MsgUpdateBalance) returns (MsgUpdateBalanceResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgRequestTransaction {
  string creator = 1;
  string originChain = 2;
  string originAddress = 3;
  string targetChain = 4;
  string targetAddress = 5;
  string amount = 6;
  string fee = 7;
}

message MsgRequestTransactionResponse {
}

message MsgObservationVote {
  string creator = 1;
  string txHash = 2;
  string chainName = 3;
  string from = 4;
  string to = 5;
  string amount = 6;
}

message MsgObservationVoteResponse {
}

message MsgUpdateBalance {
  string creator = 1;
  string chainName = 2;
  string balance = 3;
  string decimal = 4;
}

message MsgUpdateBalanceResponse {
}

// this line is used by starport scaffolding # proto/tx/message
